--- a/styles/main.css
+++ b/styles/main.css
@@ -29,7 +29,7 @@ header {visibility: hidden;}
     margin: auto;
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
     overflow: auto;
-    background: linear-gradient(315deg, #4f2991 3%, #7dc4ff 38%, #36cfcc 68%, #a92ed3 98%);
+    background: linear-gradient(315deg, #4f2991 3%, #2778bb 38%, #44ccca 68%, #a92ed3 98%);
     animation: gradient 15s ease infinite;
     background-size: 400% 400%;
     background-attachment: fixed;
